# bot

./: .gitignore  LICENSE  README.md  pyproject.toml
bot/: tztipbot.py
tests/: test_bot.py  test_integration.py
tzbot/: main.py  tezos.py  tztipbot.py
