[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Fred Yankowski <fcy@imsa.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pytezos = { git = "https://github.com/murbard/pytezos.git" }
matrix-nio = { git = "https://github.com/poljar/matrix-nio.git" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
