[tool.poetry]
name = "tzbot"
version = "0.1.0"
description = ""
authors = ["Fred Yankowski <fred@yankowski.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytezos = { git = "https://github.com/murbard/pytezos.git" }
matrix-nio = { git = "https://github.com/poljar/matrix-nio.git", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.711.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
